--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,12 +104,11 @@ h2{
 }
 
 #footer a{
+    font-weight: 700;
     color: var(--white);
+    transition: all 600ms;
     text-decoration: none;
-}
-
-#footer a:hover{
-    text-decoration: underline var(--white) 2px;
+    padding: 0px;
 }
 
 #footer p{
